--- a/pdns/recursordist/docs/changelog/4.1.rst
+++ b/pdns/recursordist/docs/changelog/4.1.rst
@@ -1091,7 +1091,7 @@ Changelogs for 4.1.x
     :tags: Improvements
     :pullreq: 5699
 
-    Implement dynamic cache sizeing.
+    Implement dynamic cache sizing.
 
   .. change::
     :tags: Bug Fixes, DNSSEC
